<resources>
    <string name="app_name">Fingerprint Authentication</string>
    <string name="instructions">
Place your fingertip on the Home button to verify your identity
</string>
    <string name="helloooooo">Helloooooo</string>
    <string name="login">Login</string>
    <string name="iban">IBAN :</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="account_name">Account Name :</string>
    <string name="save">save</string>
    <string name="load">load</string>
    <string name="welcome">Welcome !</string>
    <string name="here_are_your_accounts">Here are your accounts:</string>
    <string name="refresh">refresh</string>
</resources>